force-app/main/default/objects/Contact_Address__c/Contact_Address__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>