force-app/main/default/objects/Contact_Address__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>