force-app/main/default/objects/Contact_Address__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <type>TextArea</type>
</CustomField>