force-app/main/default/objects/Contact_Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Provider Payment</fullName>
            </value>
            <value>
                <fullName>Provider Location</fullName>
            </value>
            <value>
                <fullName>Provider Both</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>District Office</fullName>
            </value>
            <value>
                <fullName>Main Office</fullName>
            </value>
            <value>
                <fullName>Circuit Court</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Permanent Home</fullName>
            </value>
            <value>
                <fullName>Residence(if not permanent home)</fullName>
            </value>
            <value>
                <fullName>Second Home</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>