force-app/main/default/objects/Contact_Address__c/fields/Approximate_Duration_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Duration_of_Stay__c</fullName>
    <inlineHelpText>Max 25 Characters</inlineHelpText>
    <label>Approximate Duration of Stay</label>
    <type>TextArea</type>
</CustomField>