force-app/main/default/objects/Contact_Address__c/fields/Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Address</label>
    <type>Checkbox</type>
</CustomField>