force-app/main/default/objects/Contact_Address__c/fields/Is_this_a_household_member__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_household_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a household member</label>
    <type>Checkbox</type>
</CustomField>