force-app/main/default/objects/Contact_Address__c/fields/Known_danger_at_address__c.field-meta.xml
<CustomField>
    <fullName>Known_danger_at_address__c</fullName>
    <label>Known danger at address?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>