force-app/main/default/objects/Contact_Address__c/validationRules/Known_danger_at_address.validationRule-meta.xml
<ValidationRule>
    <fullName>Known_danger_at_address</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Known_danger_at_address__c,&quot;Yes&quot;), ISBLANK( Comments__c),false)</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Please add Comments for Known danger at address</errorMessage>
</ValidationRule>